--- a/httping.csproj
+++ b/httping.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\xmlConfig.cs" />
+    <Compile Include="Protocols\SMTP.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="example_config.xml">
